# taan

./: Cargo.toml  README.md  bacon.toml  index.html  package.json
.cargo/: config.toml
.github/: copilot-instructions.md
.github/instructions/: Taan, Rust + Slint instructions.instructions.md
.github/workflows/: build.yml
docs/: README.md  UI.md  implementation-roadmap.md  mvvm-architecture-guide.md  spotify-model-refactoring-guide.md  ui-callback-organization-guide.md
resources/: article.md  article.typ  player.html
resources/ui_prototype/: login.html  playlist.html  playlist_player.html
src/: App.tsx  handlers.rs  lib.rs  main.rs  models.rs  services.rs  state.rs  viewmodels.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/_handlers/: window.rs
src/components/player/: AlbumArt.tsx  CloseButton.tsx  IconButton.tsx  MusicPlayer.tsx  PrimaryControls.tsx  ProgressBar.tsx  SecondaryControls.tsx  SongDetails.tsx  VolumeControl.tsx
src/handlers/: auth.rs  player.rs  ui.rs
src/models/: authentication.rs  player.rs  tracks.rs
src/services/: spotify.rs
src/spotify/: async_loop.rs  mod.rs
src/state/: app_state.rs  auth.rs  mod.rs  player.rs  window.rs
src/ui/: colors.rs  layout.rs  mod.rs  player.rs  spotify_login.rs
src/utils/: formatTime.ts
src/viewmodels/: authentication_vm.rs  player_vm.rs  tracks_vm.rs  utils.rs  window_vm.rs
ui/: header.slint  login.slint  main-content.slint  main.slint  player-controls.slint  player.slint  player_old.slint  search-interface.slint  sidebar.slint  state.slint  tracks.slint  utils.slint
ui/components/: README.md
ui/components/common/: button.slint  close_button.slint  colors.slint  mod.slint  slider-base.slint  slider.slint
ui/components/player/: additional_controls.slint  album_art.slint  close_button.slint  main_controls.slint  player_controls.slint  progress_bar.slint  song_info.slint  volume_slider.slint
ui/state/: ARCHITECTURE.md  app_state.slint  mod.slint  player_state.slint  spotify_api.slint  ui_state.slint
