[package]
name = "taan"
version = "0.1.0"
description = "Lightweight spotify client"
authors = ["Meghdip Karmakar"]
edition = "2021"


[lib]
name = "taan_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
librespot-core = "0.7.1"
librespot-oauth = "0.7.1"
librespot-playback = "0.7.1"
librespot-metadata = "0.7.1"
librespot-protocol = "0.7.1"
